REGRESSION (iOS 26): Dialog backdrop looks weird, as it doesn't extend below address bar https://bugs.webkit.org/show_bug.cgi?id=300965 rdar://162985065

Reviewed by Abrar Rahman Protyasha.

Teach fixed container edge sampling to handle backdrops, by extending the backdrop's background
color (blended against the page background color) into the obscured content inset areas. This avoids
cases where the page behind the backdrop renderer shows up fully around the edges of the full-page
backdrop element.

Note that this covers native dialog elements as well, which use backdrop renderers.

Test: fast/page-color-sampling/color-sampling-modal-dialog.html

* LayoutTests/fast/page-color-sampling/color-sampling-modal-dialog-expected.txt: Added.
* LayoutTests/fast/page-color-sampling/color-sampling-modal-dialog.html: Added.

Add a test to exercise the change, by checking color extensions after opening and after closing a
modal dialog element.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::fixedContainerEdges const):

Canonical link: https://commits.webkit.org/301911@main